[package]
authors = ["Luis Montes <monteslu@gmail.com>"]
edition = "2021"
name    = "sdl2-mixer-node"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async"] }
napi-derive = "2"
sdl2 = { version = "0.37", features = ["mixer"], default-features = false }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true